compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__tuple_2_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "#(1, 2) == #(1, 2, 3)"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ #(1, 2) == #(1, 2, 3)
  │            ^^^^^^^^^^

Expected type:

    #(Int, Int)

Found type:

    #(Int, Int, Int)


